--- a/components/brave_rewards/browser/BUILD.gn
+++ b/components/brave_rewards/browser/BUILD.gn
@@ -9,6 +9,8 @@ source_set("browser") {
   sources = [
     "switches.cc",
     "switches.h",
+    "auto_contribution_props.cc",
+    "auto_contribution_props.h",
     "balance_report.cc",
     "balance_report.h",
     "rewards_notification_service.cc",
