--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -35,6 +35,8 @@ source_set("ui") {
     "toolbar/brave_toolbar_actions_model.h",
     "views/brave_layout_provider.cc",
     "views/brave_layout_provider.h",
+    "views/brave_actions/brave_action_view.cc",
+    "views/brave_actions/brave_action_view.h",
     "views/brave_actions/brave_actions_container.cc",
     "views/brave_actions/brave_actions_container.h",
     "views/download/brave_download_item_view.cc",
@@ -49,6 +51,8 @@ source_set("ui") {
     "views/profiles/brave_avatar_toolbar_button.h",
     "views/profiles/brave_profile_chooser_view.cc",
     "views/profiles/brave_profile_chooser_view.h",
+    "views/rounded_separator.cc",
+    "views/rounded_separator.h",
     "views/tabs/brave_new_tab_button.cc",
     "views/tabs/brave_new_tab_button.h",
     "views/toolbar/bookmark_button.cc",
