Use new size for graphic for Rewards Brave Action graphic
Size is changed to 18px as per https://github.com/brave/brave-browser/issues/2295

--- a/components/brave_rewards/resources/extension/brave_rewards/BUILD.gn
+++ b/components/brave_rewards/resources/extension/brave_rewards/BUILD.gn
@@ -24,6 +24,12 @@ transpile_web_ui("brave_rewards_panel") {
     "components/app.tsx",
     "components/panel.tsx",
     "constants/rewards_panel_types.ts",
+    "img/rewards-off.png",
+    "img/rewards-off@2x.png",
+    "img/rewards-off@3x.png",
+    "img/rewards-on.png",
+    "img/rewards-on@2x.png",
+    "img/rewards-on@3x.png",
     "utils.ts",
   ]
 
